# QuantNeural_wsl

./: .gitignore  AGENT_SYSTEM_PROMPT.md  GEMINI.md  jsconfig.json  main_executor.py  package-lock.json  package.json  pyproject.toml  pytest_output.txt  requirements.txt  run_shadow_risk_evaluation.py  tsconfig.check.json
.agent/: DEFAULT_BEHAVIOR.md
.sisyphus/: boulder.json
200tq/: E03_SSOT.md  README.md
configs/: hyperparameters.yaml  real_data_experiment_1.json  schema.md  sec_tag_mapping.yaml
docs/: DATA_CONTRACT.md  PLANS.md  SSOT_TASKS.md  SYSTEM_INTRODUCTION.md
scripts/: _temp_append.py  analyze_data.py  analyze_equity.py  analyze_returns.py  analyze_sec_coverage.py  analyze_splits.py  audit_200tqq_backtest.py  audit_manifest_stooq_tickers.py  backfill_stooq_to_supabase.py  backtest_200tqq_official_1999_2024.py  backtest_200tqq_raw.py  backtest_200tqq_strategy.py  backtest_200tqqq_1999_2024.py  build_alpha_dataset_fast.py  build_eval_table.py  build_form345_insider_features.py  build_market_cap_universe.py  build_universe_prices.py  check_tqqq.py  compare_200tq_optimized.py  compare_rank_topk.py  create_raw_prices.py  create_synthetic_tqqq.py  diagnose_synthetic_tqqq.py  download_sec_data.py  download_stooq_latest.py  generate_initial_snapshot.py  generate_real_backtest.py  inject_ts_check.py  install_hooks.py  merge_tqqq_data.py  reverse_split_adjustment.py  run_fund_feature_ablation_suite.py  run_fund_feature_ablation_sweep.py  run_real_data_experiment_1.py  run_xgb_alpha_ab_backtest.py  setup_vibe_env.py  test_official_simplified.py  (+9 more)
src/: __init__.py  (+42 more)
(+1193 files in other folders)
